--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -15,6 +15,23 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Dirac settings -->
+    <string name="dirac_title">Dirac sound enhancer</string>
+    <string name="dirac_headset_title">Headset type</string>
+    <string name="dirac_preset_title">Sound preset</string>
+
+    <!-- TODO: change the string values accordingly -->
+    <string name="dirac_headset_0">Headset 0</string>
+    <string name="dirac_headset_1">Headset 1</string>
+    <string name="dirac_headset_2">Headset 2</string>
+    <string name="dirac_headset_3">Headset 3</string>
+
+    <!-- TODO: change the string values accordingly -->
+    <string name="dirac_preset_0">Preset 0</string>
+    <string name="dirac_preset_1">Preset 1</string>
+    <string name="dirac_preset_2">Preset 2</string>
+    <string name="dirac_preset_3">Preset 3</string>
+
      <!-- Raise to wake strings-->
     <string name="raise_to_wake_gesture_title">Raise to wake</string>
     <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>
